# SoundCore-Desktop

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  config.toml  index.html  package-lock.json  package.json  sitemap.xml
.github/workflows/: docs-pages.yml  release.yml
api/: index.html
assets/css/: styles.3631c02e.css  styles.ff81ebc5.css
assets/js/: 0e384e19.7ea05fe9.js  0e384e19.7ee6c813.js  17896441.9db531d2.js  1a25ec0b.ed279d35.js  237.4114e59a.js  36994c47.fe7aa271.js  3b8c55ea.5c9d86ca.js  3b8c55ea.6eb92e89.js  3b8c55ea.9542a70c.js  436.45a46141.js  52ad9899.1f08a539.js  52ad9899.255c9080.js  52ad9899.ba2f9d29.js  542.ca32f59b.js  5e95c892.ed9e2785.js  5fbc5cf1.160b26a7.js  5fbc5cf1.6c29038b.js  5fbc5cf1.a59cf8da.js  6476eba6.17019bb9.js  814f3328.a2153eb7.js  8f030830.868b9842.js  9d8eb166.38b668e8.js  9d9f8394.fd1bc82a.js  9dd9d631.743a8d35.js  9dd9d631.ff1537cf.js  a3713279.047b84fc.js  a3713279.a66efe77.js  a6aa9e1f.fd245971.js  a7bd4aaa.a087aa8d.js  a94703ab.704fa088.js  aba21aa0.db09f913.js  main.28068228.js  main.34030463.js  main.f9af171a.js  runtime~main.0018f95c.js  runtime~main.6d84be04.js  runtime~main.e0930d02.js
blog/: index.html
deployment/: index.html
development/: index.html
docs/: docusaurus.config.js  package.json  sidebars.js
docs/docs/: api.md  deployment.md  development.md  downloads.md  features.md  installation.md  intro.md  troubleshooting.md  usage.md
docs/src/css/: custom.css
downloads/: index.html
features/: index.html
installation/: index.html
soundcore-graphify/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
soundcore-graphify/cache/: stat-index.json
src/: autostart.rs  main.rs  worker.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  worker.rs
troubleshooting/: index.html
ui/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
ui/src/: App.jsx  index.css
usage/: index.html
