[package]
name = "soundcore-desktop"
version = "1.0.0"
edition = "2024"
description = "Cross-platform desktop tray app that auto-applies Soundcore profiles (gaming mode, ANC, EQ) the moment a device connects. Windows & Linux."

[lib]
name = "soundcore_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "soundcore-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openscq30-lib = { path = "../OpenSCQ30/lib" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
macaddr = "1"
strum = "0.28"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = 2
